crates/rsonpath-syntax/tests/snapshots/query_serialization_snapshots__ron__jsonpath_example_query.snap
---
source: crates/rsonpath-syntax/tests/query_serialization_snapshots.rs
expression: "&parse(\"$..phoneNumbers[*].number\")?"
snapshot_kind: text
---
JsonPathQuery(
  segments: [
    Descendant(Selectors(
      inner: [
        Name(JsonString(
          quoted: "\"phoneNumbers\"",
        )),
      ],
    )),
    Child(Selectors(
      inner: [
        Wildcard,
      ],
    )),
    Child(Selectors(
      inner: [
        Name(JsonString(
          quoted: "\"number\"",
        )),
      ],
    )),
  ],
)
